# Base2-Engine

./: CMakeLists.txt  README.md  compile.sh
dep/include/glm/glm/detail/: type_half.inl
dep/lib/GLFW/: libglfw.3.4.dylib
shaders/GLSL/: default.frag  default.vert
shaders/SPIRV/: default.frag.spv  default.vert.spv
src/: VK_CHECK.h  app.cpp  app.h  b2e_camera.cpp  b2e_camera.h  b2e_camera_controller.cpp  b2e_camera_controller.h  b2e_device.cpp  b2e_device.h  b2e_game_object.cpp  b2e_game_object.h  b2e_model.cpp  b2e_model.h  b2e_pipeline.cpp  b2e_pipeline.h  b2e_renderer.cpp  b2e_renderer.h  b2e_swap_chain.cpp  b2e_swap_chain.h  b2e_window.cpp  b2e_window.h  main.cpp
